--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -31,7 +31,7 @@
         </intent>
     </queries>
    <application
-        android:label="Nera"
+        android:label="Nera infoetech"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
